--- a/src/main/g8/.github/workflows/ci.yml
+++ b/src/main/g8/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: coursier/cache-action@v5
       - name: Build and Test
         run: |
-          sbt -v headerCheck test:headerCheck +test
+          sbt -v +headerCheck +test:headerCheck +test
           rm -rf "\$HOME/.ivy2/local" || true
           find \$HOME/Library/Caches/Coursier/v1        -name "ivydata-*.properties" -delete || true
           find \$HOME/.ivy2/cache                       -name "ivydata-*.properties" -delete || true
